# quiet-studio

./: README.md  build.gradle.kts  settings.gradle.kts
.github/workflows/: build-apk.yml
app/: build.gradle.kts  debug.keystore
app/src/main/: AndroidManifest.xml
app/src/main/assets/music/: manifest.json
app/src/main/assets/scenes/: manifest.json
app/src/main/cpp/: CMakeLists.txt  whisper_jni.cpp
app/src/main/java/com/quietstudio/: MainActivity.kt
app/src/main/java/com/quietstudio/data/: ProjectBackup.kt  Repositories.kt
app/src/main/java/com/quietstudio/di/: AppModule.kt
app/src/main/java/com/quietstudio/navigation/: QuietNavHost.kt
app/src/main/java/com/quietstudio/transcription/: TranscriptionEngine.kt
app/src/main/res/xml/: file_paths.xml
app/src/test/java/com/quietstudio/camera/: RecordedClipImporterTest.kt
app/src/test/java/com/quietstudio/data/: ProjectBackupTest.kt
app/src/test/java/com/quietstudio/enhance/: EnhanceGradeTest.kt
app/src/test/java/com/quietstudio/music/: MusicManifestTest.kt
app/src/test/java/com/quietstudio/scenes/: AnimatedScenesManifestTest.kt  (+1 more)
gradle/: libs.versions.toml
quiet-studio/: gradle.properties
quiet-studio/.github/workflows/: build-apk.yml
quiet-studio/app/: build.gradle.kts  proguard-rules.pro
quiet-studio/app/src/main/: AndroidManifest.xml
quiet-studio/app/src/main/cpp/: whisper_jni.cpp
quiet-studio/app/src/main/res/drawable/: ic_launcher_foreground.xml
quiet-studio/app/src/main/res/values/: strings.xml  themes.xml
quiet-studio/gradle/: libs.versions.toml
tools/musicgen/: compose.py
(+73 files in other folders)
